# MediCore

./: .gitignore  README.md  Taskfile.yml  docker-compose.db.yml  docker-compose.yml  package-lock.json  skaffold.yaml
apps/api/: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  database.py  metrics.py  permissions.py  security.py
apps/api/app/modules/appointments/: repository.py  router.py  schemas.py  service.py
apps/api/app/modules/audit/: repository.py  router.py  schemas.py  service.py
apps/api/app/modules/auth/: repository.py  router.py  schemas.py  service.py
apps/api/app/modules/billing/: repository.py  router.py  schemas.py  service.py
apps/api/app/modules/doctors/: repository.py  router.py  schemas.py  service.py
apps/api/app/modules/medical_orders/: router.py  (+3 more)
apps/api/app/tests/: conftest.py  test_auth.py
apps/api/db/: sqitch.plan
apps/api/db/deploy/: appointments.sql  audit_logs.sql  doctors.sql  invoices.sql  medical_orders.sql  medical_records.sql  patients.sql  seed_profiles.sql  seed_users.sql  users.sql
apps/api/db/revert/: appointments.sql  audit_logs.sql  doctors.sql  invoices.sql  medical_orders.sql  medical_records.sql  patients.sql  seed_profiles.sql  seed_users.sql  users.sql
apps/api/db/verify/: appointments.sql  audit_logs.sql  doctors.sql  invoices.sql  medical_orders.sql  medical_records.sql  patients.sql  seed_profiles.sql  seed_users.sql  users.sql
apps/api/scripts/: deps-pipeline.sh  entrypoint.sh  install-task.sh
(+133 files in other folders)
