[project]
name = "medicore-api"
version = "0.1.0"
description = "Backend realista para gestionar operaciones basicas de un hospital"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "psycopg[binary]>=3.3.3",
    "pydantic[email]>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.27",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.1",
    "pip-audit>=2.8.0",
    "schemathesis>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
